# inverse-dynamics-model

./: .gitignore  README.md  coalesce_training_data.py  data.py  environment.yml  eval.py  evaluate.py  merge_and_save.py  predict.py  prepare_data.py  pyproject.toml  requirements.txt  run_preprocess.sh  run_train.sh  run_train1.sh  run_train2.sh  run_train3.sh  run_train_resnet.sh  slurm-97464.out  subsample_to_2fps.py  train.py
.github/workflows/: pytest.yml
data/: jpegs_to_chat_jsonl.py  mouse_generation.py  pyproject.toml  video_to_array_records.py  video_to_jpegs.py
data/idm_data/: video_to_array_records.py
dataset/: convert_mp4.py  generate_dataset.py  predecode_videos.py
evaluate/: generate.py  generate_hf.py  pyproject.toml  visualizer.html
idm/: checkpoint.py  collator.py  data.py  eval_sampler.py  generate.py  lr_schedules.py  mouse_actions.py  mouse_args.py  mouse_loss.py  mouse_metrics.py  mouse_train_utils.py  mouse_validation.py  mouse_viz.py  train.py  train_mouse.py  train_mouse_resnet.py
idm/utils/: action_metrics.py  action_text.py  actions.py  checkpoint.py  collator.py  data.py  data_jpeg.py
model/: actions.py  blocks.py  idm_video.py  predict.py  sequence_dataset.py  train.py  utils.py
slurm/: eval_baseline_10fps.sh  eval_checkpoint.sh  eval_checkpoint_5fps.sh  overfit_1batch.sh  overfit_1sample.sh  prepare_5fps_2s.sh  prepare_data.sh  prepare_data_5fps.sh  train_4gpu_full.sh  train_4gpu_lora.sh  train_4gpu_lora_10fps_v2.sh  train_4gpu_lora_5fps.sh  train_demo.sh  train_grid.sh
slurm/dev/mihir/berlin/idm/training/: train_bench.sh
tests/: test_action_metrics.py  test_action_text_utils.py  test_actions_format.py  test_bipartite_matching.py  test_black_frame_filter.py  test_checkpoint_resume.py  test_clip_chunking.py  test_collation.py  test_collator_label_weights.py  test_collator_masking.py  test_collator_prefetch_iterator.py  test_data_keys.py  test_dataloader_sharding.py  test_dense_mixed_batch_iterator.py  test_event_conversion.py  test_generate_args.py  test_grad_clipping.py  test_grain_transforms.py  test_key_normalization.py  test_lr_schedules.py  test_no_actions_join_path.py  test_smoke_pipeline.py  test_train_attention_impl.py  test_train_metadata_dims.py  test_train_mfu.py  test_validation_loss.py  test_video_to_array_records_actions.py
