[project]
name = "idm"
version = "0.1.0"
authors = [
  { email = "nikolas.rieger@tum.de" },
  { email = "franz@pdoom.org" },
  { email = "alfred@pdoom.org" },
  { email = "mihir@pdoom.org" },
]
requires-python = "==3.12.3"
dependencies = [
  "datasets",
  "numpy",
  "peft",
  "pillow",
  "pydantic==2.12.5",
  "safetensors",
  "tensorboard",
  "torch==2.9.1",
  "torchvision==0.24.1",
  "transformers==4.57.1",
  "tyro>=0.8.5",
  "nvidia-cudnn-cu12==9.16.0.29; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
]

[dependency-groups]
dev = [
  "pre-commit",
  "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["idm*"]

[tool.uv]
default-groups = ["dev"]
override-dependencies = [
  "nvidia-cudnn-cu12==9.16.0.29; sys_platform == 'linux'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
