[project]
name = "idm"
version = "0.1.0"
description = "Inverse Dynamics Model — sparse event SFT"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4,!=2.8.*",  # 2.8.x has cuDNN init issues on H100; 2.9.x needs torch.compile for Conv3d patch embed
    "transformers>=4.45",
    "peft>=0.13",
    "safetensors",
    "Pillow",
    "tqdm",
    "tyro",
    "wandb",
    "msgpack",
    "ffmpeg-python",
]

[project.optional-dependencies]
cuda = ["flash-attn>=2.5"]
dev = ["pytest"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.setuptools.packages.find]
include = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
