[project]
name = "idm-data"
version = "0.1.0"
authors = [
  {name = "Nikolas Rieger", email = "nikolas.rieger@tum.de"},
  {name = "Mihir Mahajan", email = "mihir@pdoom.org"},
]
requires-python = "==3.12.*"
dependencies = [
  "array-record>=0.7.2",
  "msgpack>=1.0.8",
  "numpy",
  "ffmpeg-python==0.2.0",
  "tqdm>=4.67.1",
  "tyro>=0.8.5",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
