[project]
name = "idm-evaluate"
version = "0.1.0"
authors = [
  { email = "nikolas.rieger@tum.de" },
  { email = "franz@pdoom.org" },
  { email = "alfred@pdoom.org" },
  { email = "mihir@pdoom.org" },
]
requires-python = "==3.12.3"
dependencies = [
  "array-record>=0.7.2",
  "msgpack>=1.0.8",
  "grain>=0.2.10",
  "sglang[all]==0.5.9",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["idm-evaluate*"]
